Redesign search page

--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -11,7 +11,7 @@
 
   <mat-sidenav-content [class.container--hover]="!(navigation.showSidenav | async) && showOnHover">
     <header>
-      <app-topnav [class.header--hover]="!showSidenav && showOnHover"></app-topnav>
+      <app-topnav></app-topnav>
     </header>
 
     <div class="container">
