--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -5,11 +5,7 @@
 }
 
 .container--hover {
-  margin-left: 80px;
-}
-
-.header--hover {
-  margin-left: 80px;
+  margin-left: 91px !important;
 }
 
 .registration-form {
