--- a/src/app/pages/customer-service-dashboard-page/customer-service/customer-service.component.html
+++ b/src/app/pages/customer-service-dashboard-page/customer-service/customer-service.component.html
@@ -11,7 +11,7 @@
 
       <div class="input-container" [class.visible]="focusedItem === 0">
         <mat-form-field class="mrw--search-input" [floatLabel]="'never'">
-          <input #orderInput type="text" [matAutocomplete]="sessionAutocomplete" (input)="sessionInputChanged($event)" matInput placeholder="Session ID or Alias">
+          <input #orderInput type="text" [matAutocomplete]="sessionAutocomplete" (keydown)="searchKeyDown($event, customerInput, 'order')" (input)="sessionInputChanged($event)" matInput placeholder="Session ID or Alias">
           <mat-icon matSuffix>search</mat-icon>
           <mat-autocomplete class="three-row-autocomplete" #sessionAutocomplete="matAutocomplete" (optionSelected)="navigateToSession($event)">
             <mat-option *ngFor="let session of sessions" [value]="session.id">
@@ -36,7 +36,7 @@
 
       <div class="input-container" [class.visible]="focusedItem === 1">
         <mat-form-field class="mrw--search-input" [floatLabel]="'never'">
-          <input #customerInput type="text" [matAutocomplete]="customerAutocomplete" (input)="customerInputChanged($event)" matInput placeholder="Name, email or phone number">
+          <input #customerInput type="text" [matAutocomplete]="customerAutocomplete" (keydown)="searchKeyDown($event, customerInput, 'customer')" (input)="customerInputChanged($event)" matInput placeholder="Name, email or phone number">
           <mat-icon matSuffix>search</mat-icon>
           <mat-autocomplete class="three-row-autocomplete" #customerAutocomplete="matAutocomplete" (optionSelected)="navigateToCustomer($event)">
             <mat-option *ngFor="let customer of customers" [value]="customer.id">
