--- a/src/app/pages/search-page/entity-list/entity-list.component.html
+++ b/src/app/pages/search-page/entity-list/entity-list.component.html
@@ -1,12 +1,14 @@
 <div class="entity-list" *ngIf="data && data.length > 0">
 
-  <div class="entity-list__item" *ngFor="let d of data" (click)="navigateToEntity(d)">
-    <div>
-      <div class="entity-list__item__title" [innerHTML]="getName(d) | highlight: query"></div>
-      <div class="entity-list__item__subtitle">{{getFieldValue(d)}}</div>
-    </div>
+  <ng-container *ngFor="let d of data">
+    <div class="entity-list__item" [class.selected]="d.id && selectedEntity && d.id === selectedEntity.id" (click)="selectEntity(d)">
+      <div>
+        <div class="entity-list__item__title" [innerHTML]="getName(d) | highlight: query"></div>
+        <div class="entity-list__item__subtitle">{{getFieldValue(d)}}</div>
+      </div>
 
-    <div class="entity-list__item__type">{{(d.fields.entity_type + '_TITLE') | translate}}</div>
-    <div class="entity-list__item__date">{{format(d.fields.created_at)}}</div>
-  </div>
+      <div class="entity-list__item__type">{{(d.fields.entity_type + '_TITLE') | translate}}</div>
+      <div class="entity-list__item__date">{{format(d.fields.created_at)}}</div>
+    </div>
+  </ng-container>
 </div>
