--- a/src/app/pages/search-page/entity-list/entity-list.component.scss
+++ b/src/app/pages/search-page/entity-list/entity-list.component.scss
@@ -8,6 +8,10 @@
     color: rgba(0, 0, 0, 0.3);
   }
 
+  .selected {
+    background: #E3F6FE;
+  }
+
   &__item {
     padding: 15px;
     cursor: pointer;
