--- a/src/app/navigation/notifications-quick/notifications-quick.component.scss
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.scss
@@ -2,6 +2,14 @@
 
   mat-icon {
     color: dimgrey;
+    cursor: pointer;
+  }
+
+  &__topnav {
+    span {
+      color: dimgrey;
+      cursor: pointer;
+    }
   }
 
   &__content {
@@ -18,7 +26,7 @@
         }
 
         .unread {
-          background-color: #049AE4;
+          background-color: #049AE4 !important;
           border-radius: 50%;
           border: 1px solid #049AE4
         }
@@ -58,6 +66,14 @@
           }
         }
       }
+
+      mat-icon {
+        margin-top: 8px;
+      }
+    }
+
+    .unread {
+      background-color: #EDFFFF;
     }
 
   }
