--- a/src/app/shared/components/alert/alert.component.scss
+++ b/src/app/shared/components/alert/alert.component.scss
@@ -1,5 +1,7 @@
 .notifications__alert {
 
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+
   &__content {
     display: flex;
     padding: 15px;
@@ -25,11 +27,26 @@
       .category {
         color: #FD1F47;
       }
+
+      .notification-options {
+        margin: -11px -16px 0 auto !important;
+        color: dimgrey;
+        cursor: pointer;
+        font-size: 24px;
+      }
+    }
+
+    .title--in-list, .body--in-list {
+      margin-left: 12px;
+    }
+
+    .flag-icon--in-list {
+      margin-left: -7px !important;
     }
 
     .title {
       margin-bottom: 10px;
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 500;
     }
 
@@ -39,9 +56,13 @@
     }
 
     mat-icon {
-      color: #FD1F47;
+      color: dimgrey;
       font-size: 15px;
       margin: 0px -4px -5px -3px
+    }
+
+    .unread {
+      color: #FD1F47;
     }
   }
 
@@ -61,5 +82,16 @@
       text-transform: uppercase;
     }
 
+    .dismiss--in-list {
+      border: 1px solid #FD1F47;
+      margin-left: 27px;
+      margin-bottom: 10px;
+      padding: 8px;
+    }
+
+  }
+
+  .actions--in-list {
+    background: none;
   }
 }
