--- a/src/app/navigation/notifications-quick/notifications-quick.component.scss
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.scss
@@ -14,6 +14,8 @@
 
   &__content {
 
+    overflow-x: hidden;
+
     &__notification {
 
       &__read {
@@ -74,6 +76,7 @@
 
     .unread {
       background-color: #EDFFFF;
+      margin-left: 4px;
     }
 
   }
