--- a/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
+++ b/src/app/pages/notifications-page/notifications-section/notifications-section.component.html
@@ -8,10 +8,14 @@
           <input matInput placeholder="{{'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filter" type="text">
         </mat-input-container>
       </div>
-      <div class="mrw-button" (click)="showAll()">ALL</div>
-      <div class="mrw-button" (click)="showAlerts()">ALERTS</div>
-      <div class="mrw-button" (click)="showNotifications()">NOTIFICATIONS</div>
-      <div class="mrw-button mark-read" (click)="markAllAsRead()">MARK ALL AS READ</div>
+      <mat-button-toggle-group #group="matButtonToggleGroup" value="buttonAll">
+        <mat-button-toggle class="mrw-button" (click)="showAll()" value="buttonAll">ALL</mat-button-toggle>
+        <mat-button-toggle class="mrw-button" (click)="showAlerts()" value="buttonAlerts">ALERTS</mat-button-toggle>
+        <mat-button-toggle class="mrw-button" (click)="showNotifications()" value="buttonNotifications">NOTIFICATIONS</mat-button-toggle>
+      </mat-button-toggle-group>
+      <mat-button-toggle-group class="mark-read" #group="matButtonToggleGroup">
+      <mat-button-toggle class="mrw-button" (click)="markAllAsRead()" value="markAllRead">MARK ALL AS READ</mat-button-toggle>
+      </mat-button-toggle-group>
     </div>
 
     <div class="notifications-container"
@@ -32,7 +36,9 @@
           <th></th>
         </thead>
         <tbody>
-          <tr *ngFor="let notification of notifications | filterEntitiesByField: 'type' : notificationType | filterStrings: filter: filterMapper" (click)="readNotification(notification)">
+          <tr *ngFor="let notification of notifications | filterEntitiesByField: 'type' : notificationType | filterStrings: filter: filterMapper" (click)="readNotification(notification)"
+              [class.unread-notification]="!notification.readAt && notification.type=='notification'"
+              [class.unread-alert]="!notification.readAt && notification.type=='alert'">
             <td><div *ngIf="!notification.readAt" class="circle"></div><mat-icon *ngIf="notification.readAt" class="circle-icon">done</mat-icon></td>
             <td>
               <mat-icon class="alert-flag" [class.unread]="!notification.readAt" *ngIf="notification.type == 'alert'">flag</mat-icon>
@@ -42,9 +48,9 @@
             <td>{{notification.category}}</td>
             <mat-icon [matMenuTriggerFor]="actionsMenu" class="notification-options">more_vert</mat-icon>
             <mat-menu #actionsMenu="matMenu" x-position="before">
-              <button mat-menu-item (click)="markAsUnread(notification)">{{'NOTIFICATIONSSECTION_MARKASUNREAD' | translate}}</button>
-              <button mat-menu-item (click)="goToLink(notification)">{{'NOTIFICATIONSSECTION_GOTOLINK' | translate}}</button>
-              <button mat-menu-item (click)="copyToClipboard(notification)">{{'NOTIFICATIONSSECTION_COPYTOCLIPBOARD' | translate}}</button>
+              <button mat-menu-item (click)="markAsUnread(notification)">{{'NOTIFICATIONSQUICK_MARKASUNREAD' | translate}}</button>
+              <button mat-menu-item (click)="goToLink(notification)">{{'NOTIFICATIONSQUICK_GOTOLINK' | translate}}</button>
+              <button mat-menu-item ngxClipboard [cbContent]="notification.body">{{'NOTIFICATIONSQUICK_COPYTOCLIPBOARD' | translate}}</button>
             </mat-menu>
           </tr>
         </tbody>
