--- a/src/app/pages/customer-service-page/customer-service-pair/customer-service-pair.component.scss
+++ b/src/app/pages/customer-service-page/customer-service-pair/customer-service-pair.component.scss
@@ -10,8 +10,8 @@
   width: 50%;
   background: #4478BE;
   border-radius: 3px;
+}
 
-  &:first-of-type {
-    margin-right: 25px;
-  }
+customer-service-customer {
+  margin-right: 25px;
 }
