--- a/src/app/pages/customer-service-page/customer-service-customer/customer-service-customer.component.html
+++ b/src/app/pages/customer-service-page/customer-service-customer/customer-service-customer.component.html
@@ -17,33 +17,46 @@
         <div class="content">
           <div class="info">
             <div class="section">
-              <div>Contact</div>
-              <div>{{customer.phone}}</div>
-              <div>{{customer.email}}</div>
-            </div>
-
-            <div class="section">
-              <div>Payment</div>
-              <div *ngFor="let creditCard of customer.creditCards">
-                <div>{{creditCard.type}}</div>
-                <div>****{{creditCard.lastFour}}</div>
+              <mat-icon>edit</mat-icon>
+              <div>
+                <div>Contact</div>
+                <div>{{customer.phone}}</div>
+                <div>{{customer.email}}</div>
               </div>
             </div>
 
             <div class="section">
-              <div>Shipping</div>
-              <div>{{customer.address.line1}}</div>
-              <div *ngIf="customer.address.line2">{{customer.address.line2}}</div>
-              <div>{{customer.address.city}}, {{customer.address.state}} {{customer.address.zip}}</div>
+              <mat-icon>edit</mat-icon>
+              <div>
+                <div>Payment</div>
+                <div *ngFor="let creditCard of customer.creditCards">
+                  <div>{{creditCard.type}}</div>
+                  <div>****{{creditCard.lastFour}}</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="section">
+              <mat-icon>edit</mat-icon>
+              <div>
+                <div>Shipping</div>
+                <div>{{customer.address.line1}}</div>
+                <div *ngIf="customer.address.line2">{{customer.address.line2}}</div>
+                <div>{{customer.address.city}}, {{customer.address.state}} {{customer.address.zip}}</div>
+              </div>
             </div>
           </div>
 
-          <div class="events"></div>
+          <div class="events">
+            <events-table *ngIf="customer" [customer]="customer" (addNoteClicked)="setIndex(1)"></events-table>
+          </div>
         </div>
       </mat-tab>
 
       <mat-tab>
-        <div class="content"></div>
+        <div class="content">
+          <grid-notes-component *ngIf="customer" [customerId]="customer.id"></grid-notes-component>
+        </div>
       </mat-tab>
 
     </mat-tab-group>
