--- a/src/app/pages/customer-service-page/customer-service-order/customer-service-order.component.html
+++ b/src/app/pages/customer-service-page/customer-service-order/customer-service-order.component.html
@@ -1,3 +1,38 @@
-<p>
-  customer-service-order works!
-</p>
+<div class="customer-service-item">
+  <div class="header">
+    <div>Purchases</div>
+
+    <div class="order-data">
+
+    </div>
+  </div>
+
+  <div class="blue-tab-header">
+    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="selectedIndex === 0" (click)="setIndex(0)">ORDERS</div>
+    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="selectedIndex === 1" (click)="setIndex(1)">REBILLS</div>
+    <div class="blue-tab-header__item" [class.blue-tab-header__item--active]="selectedIndex === 2" (click)="setIndex(2)">HISTORY</div>
+  </div>
+
+  <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedIndex">
+
+    <mat-tab>
+      <div class="content">
+        <customer-service-sessions [id]="customerId"></customer-service-sessions>
+      </div>
+    </mat-tab>
+
+    <mat-tab>
+      <div class="content">
+
+      </div>
+    </mat-tab>
+
+    <mat-tab>
+      <div class="content">
+
+      </div>
+    </mat-tab>
+
+  </mat-tab-group>
+
+</div>
